        [ ] - Add page to `http://compose.afdaniele.com` that helps creating configuration files for pages, packages, configurations metadata and API endpoint descriptions. Some sort of interactive way of adding fields (type, description, etc.) and then compile into JSON


    [ ] - v0.9
        [X] - no need to modify the file /system/config/configuration.php after installing \compose\

        [X] - updated CSS checkbox switch

        [X] - Update the API Documentation so that it shows whether an API action is accessible via web/app
            [ ] - Update the API Documentation so that we explain the difference between the two authentication modes (web VS app)

        [X] - It is now possible to update the status of a user

        [X] - implemented error collection and `Debug` page with shortcut to a GitHub New Issue page

        [X] - add API Keys to user profile
            [X] - implement multi API keys per user with per key enabled API actions

        [X] - the RestfulAPI is now managed by the class \system\classes\RestfulAPI.
            [X] - update api page
            [X] - update api settings page
            [X] - update api settings actions
            [X] - update api executors
            [X] - update web-api index file

        [X] - add cache system
            [X] - cache Core::$packages
            [X] - cache Core::$pages
            [X] - cache Core::$api
            [X] - cache Core::$settings

        [X] - implement maintenance mode
            [X] - all the pages will be redirected to maintenance

        [X] - implement package-specific data
            [X] - public data goes in /data/public
                [X] - usually stores things that will come with the package and do not change over time
                [X] - automatically create a symlink from /system/packages/<package_name>/data/public/ to /data/<package_name>/
            [X] - private data goes in /data/private